2009-01-03	Pablo Polvorin	<pablo.polvorin@process-one.net>
	* src/core/exmpp_jid.erl: Change #jid structure to use binary() storage
	for node, domain and resource.

	* testsuite/jid.erl: Update testsuite.

	* src/network/exmpp_session.erl: Update to new parser options and JID API.

	* include/exmpp_jid.hrl, exmpp_xmpp.hrl: Prepate to hide #jid record
	definition. 
	

2008-12-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl: style(9).

	* c_src/exmpp_stringprep.c, c_src/exmpp_xml_expat.c,
	c_src/exmpp_xml_legacy.erl, c_src/exmpp_xml_libxml2.c: Change the way
	structures are initialized because the previous initializing style was
	C99 and Visual C++ (and other C++ compilers) doesn't understand this
	standard.

	* c_src/Makefile.win32: Update this makefile for Visual C++ to include
	new port drivers and remove the old built sources.

2008-12-17  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_presence.erl: Bug fix in get_type/1.

2008-12-10  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/internal/exmpp_known_nss.hrl.js,
	include/internal/exmpp_known_elems.hrl.js,
	include/internal/exmpp_known_attrs.hrl.js: Fixed the "usage" string.

	* src/core/exmpp_known_nss.erl.awk, src/core/exmpp_known_nss.erl.js,
	src/core/exmpp_known_elems.erl.awk, src/core/exmpp_known_elems.erl.js,
	src/core/exmpp_known_attrs.erl.awk, src/core/exmpp_known_attrs.erl.js,
	src/Makefile.am, src/Emakefile.in, ebin/Makefile.am: Generate Erlang
	modules to convert known namespaces/elements/attributes to list. This
	benefits from Erlang constants handling and decreases memory
	footprint. Thanks to Pablo Polvorin.

	* src/core/exmpp_xml.erl: Use the new modules to convert known
	namespaces/elements/attributes. Thanks to Pablo Polvorin.
	(node_to_list/3, node_to_binary/3): Remove specific code and use
	node_to_iolist/3.

	* src/network/exmpp_session.erl: Update parser options; they were left